--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -1,18 +1,24 @@
-<nav class="navbar navbar-expand-md" id="navbarId" [ngClass]="{'navbar-light': !isTop, 'bg-light':!isTop}">
+<nav class="navbar navbar-expand-md navbar-light" id="navbarId" [ngClass]="{ 'bg-light':!isTop}">
   <a class="navbar-brand" routerLink='/homepage' routerLinkActive="active" >
+    <div *ngIf="smallwindow; then smallwindow else bigwindow"></div>
+    <ng-template #bigwindow>
     <div *ngIf="isTop; then thenBlock else elseBlock"></div>
     <ng-template #thenBlock>
-        <img src="../../../../assets/images/logo_white.png">
+        <img id="logoimage" src="../../../../assets/images/logo_white.png">
     </ng-template>
     <ng-template #elseBlock>
       <img src="../../../../assets/images/logo_black.png">
     </ng-template>
+  </ng-template>
+  <ng-template #smallwindow>
+    <img src="../../../../assets/images/logo_black.png">
+  </ng-template>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" style="height:60px;" id="navbarNavDropdown">
-    <ul class="navbar-nav ml-auto " style="height:100%">
+    <ul class="navbar-nav ml-auto " id="dropdown-menu" style="height:100%">
       <!-- <li class="nav-item active">
         <a class="nav-link s2gold" routerLink='/homepage' routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
       </li> -->
