--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -1,23 +1,19 @@
 .navbar{
     position:fixed;
     z-index:99;
-    background-color: transparent;
     width:100%;
 }   
  a.nav-link
 {
     color: white;
     padding-top:20px;
-    padding-bottom: 16px;
+    padding-bottom: 18px;
 }
 a.nav-link:focus
 {
     color: #c48f45;
 }
-#navbarId.bg-light.navbar-light
-{
-    color: aqua;
-}
+
 #navbarId
 {
     padding-top: 0px;
@@ -29,7 +25,7 @@ li.nav-item
    
 }
 
-.navbar-light li.nav-item :hover
+.bg-light li.nav-item :hover
 {
     background-color: #c48f45;
     text-align: center; 
@@ -39,4 +35,14 @@ li.nav-item
     -ms-transition: all .5s; 
     -o-transition: all .5s; 
     transition: all .5s;
+}
+@media(max-width:768px) {
+   #navbarId
+   {
+       background: white !important;
+       height: 60px !important;
+   }
+   ul{
+       background: white;
+   }
 }
