--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -5,7 +5,7 @@
 }   
  a.nav-link
 {
-    color: white;
+    color: white !important;
     padding-top:20px;
     padding-bottom: 18px;
 }
@@ -16,15 +16,14 @@ a.nav-link:focus
 
 #navbarId
 {
-    padding-top: 0px;
-    padding-bottom: 0px;
+padding: 0;
 }
 li.nav-item
 {
    height:100%;
    
 }
-
+.bg-light a.nav-link{color: black !important;}
 .bg-light li.nav-item :hover
 {
     background-color: #c48f45;
@@ -36,7 +35,10 @@ li.nav-item
     -o-transition: all .5s; 
     transition: all .5s;
 }
+button.navbar-toggler
+{outline: 0;}
 @media(max-width:768px) {
+    a.nav-link{color: black !important;}
    #navbarId
    {
        background: white !important;
@@ -45,4 +47,19 @@ li.nav-item
    ul{
        background: white;
    }
+   #logoimage
+   {
+    content:url(../../../../assets/images/logo_black.png);
+   }
+   li.nav-item :hover
+{
+    background-color: #c48f45;
+    text-align: center; 
+    cursor: pointer; 
+    -webkit-transition: all .5s; 
+    -moz-transition: all .5s; 
+    -ms-transition: all .5s; 
+    -o-transition: all .5s; 
+    transition: all .5s;
+}
 }
