--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -11,7 +11,7 @@
 }
 a.nav-link:focus
 {
-    color: #c48f45;
+    color: #c48f45 !important;
 }
 
 #navbarId
@@ -24,6 +24,7 @@ li.nav-item
    
 }
 .bg-light a.nav-link{color: black !important;}
+.bg-light li.nav-item :focus{color: #c48f45 !important;}
 .bg-light li.nav-item :hover
 {
     background-color: #c48f45;
