--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -4,8 +4,11 @@
 <div class="row ">
   <div class="col-12 back1">
     <div class='container'>
-      <div class="row homeTopLogo1 text-center"> <div class="col-12"><img src=" https://www.thebigletterco.com.au/wp-content/uploads/2015/03/logo-white.png"></div></div>
-      <div class="row homeTopLogo2 pb-5 text-center"><div class="col-12"> <img src="https://www.thebigletterco.com.au/wp-content/uploads/2015/04/MelbournesLeading-02-on.png" ></div> </div>
+      <div class="row homeTopLogo1 text-center"> <div class="col-12">
+        <img src="../../../../assets/images/logoimagegoldbig.png"></div></div>
+      <div class="row homeTopLogo2 pb-5 text-center"><div class="col-12">
+          <h1 class="j1">Auckland Leading</h1>
+        </div> </div>
       <div class="row text-center"><div class="col-12 mb-5" ><span class="j1">Letter & Event Hire Company</span> </div>
     </div>
       </div>
@@ -13,6 +16,7 @@
   </div>
 
   <!-- product pics -->
+  
   <div style="background-image: url(https://www.thebigletterco.com.au/wp-content/uploads/2013/10/logo-watermark-02.png);background-size: cover; background-position: center center;width: auto; height: 100%; opacity: 1;">
       <div class="container my-5 border-top pt-5"> <div class="row mt-5 productsOverview"><div class=' col-sm-12 col-md-3' *ngFor="let product of products"><img src={{product.imgLink}} title={{productName}}></div></div>
       </div>
@@ -44,7 +48,7 @@
   <!-- intro -->
   <div class="container border-bottom">
     <div class="row">
-      <div class="col-sm-12 col-md-4"> <img src="https://www.thebigletterco.com.au/wp-content/uploads/2013/10/logo-black.png" style=" height: auto;
+      <div class="col-sm-12 col-md-4"> <img src="../../../../assets/images/27b25727867542241b089db0d3eb3c55.jpg" style=" height: auto;
         max-width: 100%;"></div>
       <div class="col-sm-12 col-md-8">
         <h2>The Leading Letter Hire Company in Melbourne</h2>
