--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -28,13 +28,19 @@
             <div class="carousel-inner" >
                 <!-- active -->
               <div class="carousel-item active">
-                <img src="http://localhost:56662/ImgTest/test1.png" class="d-block w-100">
+                <!-- <img src="http://localhost:56662/ImgTest/test1.png" class="d-block w-100"> -->
+                <img src="../../../../assets/images/productImg1.jpeg" class="d-block w-100">
+
               </div>
               <div class="carousel-item">
-                <img src="http://localhost:56662/ImgTest/test2.jpeg" class="d-block w-100">
+                <!-- <img src="http://localhost:56662/ImgTest/test2.jpeg" class="d-block w-100"> -->
+                <img src="../../../../assets/images/productImg2.jpeg" class="d-block w-100">
+
               </div>
               <div class="carousel-item">
-                <img src="http://localhost:56662/ImgTest/test3.jpeg" class="d-block w-100">
+                <!-- <img src="http://localhost:56662/ImgTest/test3.jpeg" class="d-block w-100"> -->
+                <img src="../../../../assets/images/productImg3.png" class="d-block w-100">
+
               </div>
             </div>
             </a>
