--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -1,3 +1,54 @@
-<p>
-  shopping_cart works!
-</p>
+<div class="container"> 
+  <div class="row py-5">&nbsp;</div>
+  <div class="row py-5">&nbsp;</div>
+</div>
+<div class="container pt-5">
+  <div class="row py-1">
+      <div class="col-5 s2bold"> Product Detail</div>
+      <div class="col-2 s2bold ">Unit price</div>
+      <div class="col-1 s2bold">Amount</div>
+      <div class="col-1 s2bold">Totally</div>
+      <div class="col-3 s2bold">Action</div>
+  </div>
+  <div class="row mt-3">
+      <div class="col-2"> <img src="../../../assets/images/productImg1.jpeg"></div>
+      <div class="col-3 pt-4"><span class="m2">Illuminated LOVE</span></div>
+      <div class="col-2 pt-4">$150</div>
+      <div class="col-1 pt-4">3</div>
+      <div class="col-1 pt-4 bg-gray">$450</div>
+      <div class="col-3">
+          <div>Delete</div>
+          <div>View Detail</div>
+      </div>  
+    </div>
+    <div class="row mt-3">
+      <div class="col-2"><img src="../../../assets/images/productImg2.jpeg"></div>
+      <div class="col-3 pt-4"><span class="m2">Signature Letter Range</span></div>
+      <div class="col-2 pt-4">$120</div>
+      <div class="col-1 pt-4">3</div>
+      <div class="col-1 pt-4 bg-gray">$360</div>
+      <div class="col-3">
+        <div>Delete</div>
+        <div>View Detail</div>
+      </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col-2"><img src="../../../assets/images/productImg3.png"></div>
+        <div class="col-3 pt-4"><span class="m2">LOVE in White</span></div>
+        <div class="col-2 pt-4">$140</div>
+        <div class="col-1 pt-4">3</div>
+        <div class="col-1 pt-4 bg-gray">$420</div>
+        <div class="col-3">
+          <div>Delete</div>
+          <div>View Detail</div>
+        </div>
+      </div>
+</div>
+
+<div class="container my-5">
+  <div class="row justify-content-end border py-3">
+      <div class="col-6 py-2"><a class='s2gold' [routerLink]="['/']"><i class="fas fa-arrow-left"></i>&nbsp; Continue Shopping</a> </div>
+      <div class="col-2 py-2">Total Price: <span class="s2bold">$1230</span></div>
+      <div class="col-3"><button class="btn btn-outline-gold">Submit cart</button></div>
+  </div>
+</div>
