--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -1,6 +1,9 @@
-<div class="container-fliud ">
-  <div class="row py-3">&nbsp;</div>
- <img src="assets/images/location.PNG" style="width:100%;overflow: hidden;filter: brightness(90%);"/>
+<div class="container-fluid mapImg">
+  <div class="row py-5">&nbsp;</div>
+  <div class="row py-5">&nbsp;</div>
+  <div class="row py-5">&nbsp;</div>
+  <div class="row py-5">&nbsp;</div>
+ <!-- <img src="assets/images/location.PNG" style="width:100%;filter: brightness(90%);"/> -->
 </div>
 
 <div class="container">
@@ -8,7 +11,7 @@
     <!-- facebook -->
     <div class="col-12 col-md-4">
       <div class="l2">Get Social</div>
-      <div class="row"><div class="col-4"><i class="fab fa-facebook-square"></i></div><div class="col-4"><i class="fab fa-instagram"></i></div></div>
+      <div class="row"><div class="col-1"><i class="fab fa-facebook-square"></i></div><div class="col-1"><i class="fab fa-instagram"></i></div></div>
       <div class="l2">Contact Info</div>
       <div class="row"> <div class="col-3"><i class="fas fa-map-marker-alt"></i></div><div class="col-9">25 stock street</div></div>
       <div class="row"><div class="col-3"><i class="fas fa-phone-volume"></i></div><div class="col-9">11122233456</div></div>
