--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -12,10 +12,10 @@
   </div>
   <div class="row mt-3">
       <div class="col-2"> <img src="../../../assets/images/productImg1.jpeg"></div>
-      <div class="col-3 pt-4"><span class="m2">Illuminated LOVE</span></div>
-      <div class="col-2 pt-4">$150</div>
-      <div class="col-1 pt-4">3</div>
-      <div class="col-1 pt-4 bg-gray">$450</div>
+      <div class="col-3"><span class="m2">Illuminated LOVE</span></div>
+      <div class="col-2 ">$150</div>
+      <div class="col-1 ">3</div>
+      <div class="col-1 bg-gray">$450</div>
       <div class="col-3">
           <div>Delete</div>
           <div>View Detail</div>
@@ -23,10 +23,10 @@
     </div>
     <div class="row mt-3">
       <div class="col-2"><img src="../../../assets/images/productImg2.jpeg"></div>
-      <div class="col-3 pt-4"><span class="m2">Signature Letter Range</span></div>
-      <div class="col-2 pt-4">$120</div>
-      <div class="col-1 pt-4">3</div>
-      <div class="col-1 pt-4 bg-gray">$360</div>
+      <div class="col-3"><span class="m2">Signature Letter Range</span></div>
+      <div class="col-2">$120</div>
+      <div class="col-1">3</div>
+      <div class="col-1 bg-gray">$360</div>
       <div class="col-3">
         <div>Delete</div>
         <div>View Detail</div>
@@ -34,10 +34,10 @@
     </div>
     <div class="row mt-3">
         <div class="col-2"><img src="../../../assets/images/productImg3.png"></div>
-        <div class="col-3 pt-4"><span class="m2">LOVE in White</span></div>
-        <div class="col-2 pt-4">$140</div>
-        <div class="col-1 pt-4">3</div>
-        <div class="col-1 pt-4 bg-gray">$420</div>
+        <div class="col-3"><span class="m2">LOVE in White</span></div>
+        <div class="col-2">$140</div>
+        <div class="col-1">3</div>
+        <div class="col-1 bg-gray">$420</div>
         <div class="col-3">
           <div>Delete</div>
           <div>View Detail</div>
@@ -48,7 +48,7 @@
 <div class="container my-5">
   <div class="row justify-content-end border py-3">
       <div class="col-6 py-2"><a class='s2gold' [routerLink]="['/']"><i class="fas fa-arrow-left"></i>&nbsp; Continue Shopping</a> </div>
-      <div class="col-2 py-2">Total Price: <span class="s2bold">$1230</span></div>
+      <div class="col-3 py-2">Total Price: <span class="s2bold">$1230</span></div>
       <div class="col-3"><button class="btn btn-outline-gold">Submit cart</button></div>
   </div>
 </div>
