--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -34,7 +34,7 @@
 <div class="footerbot">
   <div class="container">
     <br>
-    <p style="margin-bottom:0px;">The Big Letter Co. © 2017 All rights reserved |</p>
+    <!-- <p style="margin-bottom:0px;">The Big Letter Co. © 2017 All rights reserved |</p> -->
     <br>
   </div>
 </div>
