--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -49,6 +49,6 @@
   <div class="row justify-content-end border py-3">
       <div class="col-6 py-2"><a class='s2gold' [routerLink]="['/']"><i class="fas fa-arrow-left"></i>&nbsp; Continue Shopping</a> </div>
       <div class="col-3 py-2">Total Price: <span class="s2bold">$1230</span></div>
-      <div class="col-3"><button class="btn btn-outline-gold">Submit cart</button></div>
+      <div class="col-3"><button class="btn btn-outline-gold" routerLink = '/userInfo'>Submit cart</button></div>
   </div>
 </div>
