--- a/src/app/fcomponents/products/product/product.component.css
+++ b/src/app/fcomponents/products/product/product.component.css
@@ -4,3 +4,26 @@
 .smallImg:hover{
     cursor: pointer;
 }
+#shadow{
+    display: none;
+    position: absolute;
+    top:0px;
+    background-color: #000;
+    opacity: 0.3;
+    height: 150px;
+    width: 150px;
+}
+#showDetails{
+    width:600px;
+    height: 600px;
+    position: absolute;
+    top:0;
+    display: none;
+    overflow: hidden;
+    border: #ededed 1px solid;
+    background-color: #FFFFFF;
+    z-index: 99;
+}
+#showDetails img{
+    position: absolute;
+}
