--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.navbar{
+/* .navbar{
     position:fixed;
     z-index:99;
     width:100%;
@@ -64,4 +64,8 @@ button.navbar-toggler
     -o-transition: all .5s; 
     transition: all .5s;
 }
+} */
+.navbar-light .navbar-nav .nav-link.active
+{
+    color: #c48f45 !important;
 }
