--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -41,38 +41,41 @@
   </div>
 </nav> -->
 
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-light bg-light border-bottom p-0 p-md-1">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item pl-md-5">
-                <a class="nav-link" routerLink='/hire' routerLinkActive="active">Hire</a>
+                <a class="nav-link s2bold" routerLink='/hire' routerLinkActive="active">Hire</a>
             </li>
             <li class="nav-item pl-md-5">
-                <a class="nav-link" routerLink='/services' routerLinkActive="active">Party Services</a>
+                <a class="nav-link s2bold" routerLink='/services' routerLinkActive="active">Party Services</a>
             </li>
             <li class="nav-item pl-md-5">
-                <a class="nav-link" routerLink='/packages' routerLinkActive="active">Party Packages</a>
+                <a class="nav-link s2bold" routerLink='/packages' routerLinkActive="active">Party Packages</a>
             </li>
         </ul>
     </div>
 
     <div class="mx-auto order-0">
-        <a class="nav-link" routerLink='/homepage' routerLinkActive="active"><img src="../../../../assets/images/Asset1-4x-big.png" style="zoom:0.5;" /></a>
+        <a class="nav-link p-0 p-md-1" routerLink='/homepage' routerLinkActive="active">
+          <img class="d-none d-lg-block" src="../../../../assets/images/Asset1-4x-big.png" style="zoom:0.5;" />
+          <img class="d-md-block d-lg-none" src="../../../../assets/images/Asset1-4x-mid.png" style="zoom:0.8;" />
+        </a>
     </div>
     <div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2"><span class="navbar-toggler-icon"></span></button>
+      <button class="navbar-toggler mr-2" type="button" data-toggle="collapse" data-target=".dual-collapse2"><span class="navbar-toggler-icon"></span></button>
     </div>
     
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item pr-md-5">
-                <a class="nav-link" routerLink ='/aboutUs' routerLinkActive="active">About us</a>
+                <a class="nav-link s2bold" routerLink ='/aboutUs' routerLinkActive="active">About us</a>
             </li>
             <li class="nav-item pr-md-5">
-                <a class="nav-link" routerLink ='/faq' routerLinkActive="active">FAQ</a>
+                <a class="nav-link s2bold" routerLink ='/faq' routerLinkActive="active">FAQ</a>
             </li>
             <li class="nav-item pr-md-5">
-                <a class="nav-link" routerLink='/contactUs' routerLinkActive="active">Contact Us</a>
+                <a class="nav-link s2bold" routerLink='/contactUs' routerLinkActive="active">Contact Us</a>
             </li>
         </ul>
     </div>
