--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -37,7 +37,7 @@
     </div>
     <div *ngIf="!quantityFilled">Please enter Quantity</div>
   </div> -->
-  <div class="col-12 col-md-6 col-lg-7 pl-lg-5">
+  <div class="col-12 col-md-6 col-lg-5 pl-lg-5">
     <!-- large part of img -->
     <div id="showDetails" #showDetails>
       <!-- <span class="l2" #showDetails>the testing area</span> -->
@@ -60,6 +60,12 @@
       <div class="col-4" *ngIf="inCart==1"><button class='btn btn_gold' routerLink='/shoppingCart'>Add To Cart</button></div>
     </div>
 
+   </div>
+   <div class="col-2">
+     Products On Sale!
+     <div><img src="../../../../assets/images/productImg1.jpeg" class="w-100"></div>
+     <div><span></span><span></span></div>
+     <div><img src="../../../../assets/images/productImg2.jpeg" class="w-100"></div>
    </div>
  </div>
 </div>
